@@ -4,6 +4,14 @@ v.0003 Moar Cards
 - Created ICardSpaceBindable interface
 - Added New cards, Crimson Butterfly, Brigitte (Grade 3) and Knight of the Harp, Tristan (Grade 2)
 - Added New card, Solitary Knight Gancelot
+- Added New cards: 
+    Flogal,
+    BringerOfGoodLuckEpona,
+    WeaponsDealerGovannon,
+    YggdrasilMaidenElaine,
+    CovenantKnightRandolf
+- Implemented Stand Triggers
+- Implemented Hand Skills
 
 v.0002 Skills and Trigger selection
 - Updated for ArC v.0000004
